crates/jolt_java_fmt/tests/snapshots/recovery_snapshots__program_containers.snap
---
source: crates/jolt_java_fmt/tests/recovery_snapshots.rs
expression: snapshot
---
input:
package alpha;
package beta;

module first {}
module second {}

class AfterModules {}

formatted:
package alpha;

package beta;

module first {
}

module second {
}

class AfterModules {
}

diagnostics:
(none)
