crates/jolt_java_fmt/tests/snapshots/recovery_snapshots__qualifier_dots_without_qualifiers.snap
---
source: crates/jolt_java_fmt/tests/recovery_snapshots.rs
expression: snapshot
---
input:
class C { C() { <T>.this(); } void m() { .new Nested(); .this; .super; } }

formatted:
class C {
  C() {
    <T>. this ();
  }

  void m() {
    .newNested();
    .this;
    .super;
  }
}

diagnostics:
code=java.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(19), end: TextSize(20) }) message=expected `this` or `super` in constructor invocation
code=java.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(19), end: TextSize(20) }) message=expected argument list
code=java.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(19), end: TextSize(20) }) message=expected expression
code=java.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(20), end: TextSize(24) }) message=unexpected token in expression
code=java.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(24), end: TextSize(25) }) message=unexpected token in expression
code=java.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(41), end: TextSize(42) }) message=expected expression
code=java.parse.invalid_statement_expression severity=Error stage=Parser range=Some(TextRange { start: TextSize(42), end: TextSize(45) }) message=unexpected token in statement expression
code=java.parse.invalid_statement_expression severity=Error stage=Parser range=Some(TextRange { start: TextSize(46), end: TextSize(52) }) message=unexpected token in statement expression
code=java.parse.invalid_statement_expression severity=Error stage=Parser range=Some(TextRange { start: TextSize(52), end: TextSize(53) }) message=unexpected token in statement expression
code=java.parse.invalid_statement_expression severity=Error stage=Parser range=Some(TextRange { start: TextSize(53), end: TextSize(54) }) message=unexpected token in statement expression
code=java.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(56), end: TextSize(57) }) message=expected expression
code=java.parse.invalid_statement_expression severity=Error stage=Parser range=Some(TextRange { start: TextSize(57), end: TextSize(61) }) message=unexpected token in statement expression
code=java.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(63), end: TextSize(64) }) message=expected expression
code=java.parse.invalid_statement_expression severity=Error stage=Parser range=Some(TextRange { start: TextSize(64), end: TextSize(69) }) message=unexpected token in statement expression
