crates/jolt_java_fmt/tests/snapshots/recovery_snapshots__recovered_declaration_names_and_modifiers.snap
---
source: crates/jolt_java_fmt/tests/recovery_snapshots.rs
expression: snapshot
---
input:
record sealed(int value) {}

class RecoveredModifiers {
    transient void method() {}
}

formatted:
record sealed(int value) {}

class RecoveredModifiers {
  transient void method() {
  }
}

diagnostics:
code=java.parse.restricted_type_identifier severity=Error stage=Parser range=Some(TextRange { start: TextSize(7), end: TextSize(13) }) message=expected type name
code=java.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(60), end: TextSize(69) }) message=invalid method modifier
