crates/jolt_java_fmt/tests/snapshots/recovery_snapshots__recovery_boundary_program.snap
---
source: crates/jolt_java_fmt/tests/recovery_snapshots.rs
expression: snapshot
---
input:
{
  asd;
}

formatted:
{
  asd;
}

diagnostics:
code=java.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(0), end: TextSize(1) }) message=unexpected token at top level
