crates/jolt_java_fmt/tests/snapshots/recovery_snapshots__recovery_boundary_spacing.snap
---
source: crates/jolt_java_fmt/tests/recovery_snapshots.rs
expression: snapshot
---
input:
public class LruCache<.K,V>
class Fields {
  int .value;
  private final Map<K,..Node<K,V>> nodes=new HashMap<>();
  private final Map<K,+Node<K,V>> alternateNodes=new HashMap<>();
}

formatted:
public class LruCache<.K, V>

class Fields {
  int .value;
  private final Map<K, ..Node<K,V>> nodes = new HashMap<>();
  private final Map<K, +Node<K,V>> alternateNodes = new HashMap<>();
}

diagnostics:
code=java.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(22), end: TextSize(23) }) message=expected type parameter name
code=java.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(28), end: TextSize(33) }) message=expected type body
code=java.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(49), end: TextSize(50) }) message=expected variable name
code=java.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(79), end: TextSize(80) }) message=expected type
code=java.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(137), end: TextSize(138) }) message=expected type
