crates/jolt_java_fmt/tests/snapshots/recovery_snapshots__resource_and_catch_lists.snap
---
source: crates/jolt_java_fmt/tests/recovery_snapshots.rs
expression: snapshot
---
input:
class C { void m() { try (a + /* resource */ ; b) {} catch (A | /* catch */ | B e) {} } }

formatted:
class C {
  void m() {
    try (
      a+ /* resource */;b
    ) {
    } catch (A | /* catch */ |B e) {
    }
  }
}

diagnostics:
code=java.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(45), end: TextSize(46) }) message=expected expression
code=java.parse.invalid_resource_variable_access severity=Error stage=Parser range=Some(TextRange { start: TextSize(47), end: TextSize(48) }) message=unexpected token in resource variable access
code=java.parse.invalid_resource_variable_access severity=Error stage=Parser range=Some(TextRange { start: TextSize(48), end: TextSize(49) }) message=expected resource variable declaration or variable access
code=java.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(76), end: TextSize(77) }) message=expected class or interface type
