crates/jolt_java_fmt/tests/snapshots/recovery_snapshots__switch_and_module_lists.snap
---
source: crates/jolt_java_fmt/tests/recovery_snapshots.rs
expression: snapshot
---
input:
class C { void m(Object value) { switch (value) { case A, /* case */ , B -> use(); } } }
module m { exports p to a, /* module */ , b; }

formatted:
class C {
  void m(Object value) {
    switch (value) {
      case A, /* case */ , B -> use();
    }
  }
}

module m { exports p to a, /* module */ , b; }

diagnostics:
code=java.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(129), end: TextSize(130) }) message=expected identifier
