crates/jolt_java_fmt/tests/snapshots/recovery_snapshots__switch_block_unowned_tokens.snap
---
source: crates/jolt_java_fmt/tests/recovery_snapshots.rs
expression: snapshot
---
input:
class C { void m(int value) { switch (value) { /* block */ + ; case 1 -> use(); } } }

formatted:
class C {
  void m(int value) {
    switch (value) { /* block */
      + ;
      case 1 -> use();
    }
  }
}

diagnostics:
code=java.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(59), end: TextSize(60) }) message=expected switch label
code=java.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(61), end: TextSize(62) }) message=expected expression
code=java.parse.invalid_statement_expression severity=Error stage=Parser range=Some(TextRange { start: TextSize(61), end: TextSize(62) }) message=expected statement expression
