crates/jolt_java_fmt/tests/snapshots/recovery_snapshots__switch_rule_empty_body.snap
---
source: crates/jolt_java_fmt/tests/recovery_snapshots.rs
expression: snapshot
---
input:
class C { void m(int value) { switch (value) { case 1 -> /* empty */ ; } } }

formatted:
class C {
  void m(int value) {
    switch (value) {
      case 1 -> /* empty */ ;
    }
  }
}

diagnostics:
code=java.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(69), end: TextSize(70) }) message=expected expression
