crates/jolt_java_fmt/tests/snapshots/recovery_snapshots__switch_statement_group.snap
---
source: crates/jolt_java_fmt/tests/recovery_snapshots.rs
expression: snapshot
---
input:
class C { void m(int value) { switch (value) { case 1: /* group */ + ; use(); } } }

formatted:
class C {
  void m(int value) {
    switch (value) {
      case 1: /* group */
        +;use();
    }
  }
}

diagnostics:
code=java.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(69), end: TextSize(70) }) message=expected expression
code=java.parse.invalid_statement_expression severity=Error stage=Parser range=Some(TextRange { start: TextSize(71), end: TextSize(74) }) message=expected statement expression
code=java.parse.invalid_statement_expression severity=Error stage=Parser range=Some(TextRange { start: TextSize(71), end: TextSize(74) }) message=unexpected token in statement expression
code=java.parse.invalid_statement_expression severity=Error stage=Parser range=Some(TextRange { start: TextSize(74), end: TextSize(75) }) message=unexpected token in statement expression
code=java.parse.invalid_statement_expression severity=Error stage=Parser range=Some(TextRange { start: TextSize(75), end: TextSize(76) }) message=unexpected token in statement expression
